<?xml version="1.0"?>
<package format="3">
  <name>adxl355_viz</name>
  <version>0.1.0</version>
  <description>Real-time ADXL355 acceleration visualization with PyQt5 and pyqtgraph</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-pyqtgraph</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
